# visitor_data2

./: .gitignore  manage.py  pyproject.toml  requirements.txt
detection_Project/: asgi.py  global_config.py  settings.py  urls.py  wsgi.py
visitor/: admin.py  detect.py  models.py  serializers.py  urls.py  views.py
visitor/migrations/: 0001_initial.py  0002_alter_visitor_data_id.py  0003_alter_visitor_data_id.py  0004_visitor_data_ss_captured_alter_visitor_data_id.py  0005_remove_visitor_data_ss_captured.py  0006_alter_visitor_data_id.py  0007_remove_visitor_data_image.py  0008_remove_visitor_data_created_at.py  0009_visitor_data_image.py  0010_alter_visitor_data_image.py  0011_alter_visitor_data_phone_no.py
visitor/static/css/: styles.css
visitor/templates/: index.html
